--- a/app/src/main/res/menu/bottom_navigation_items.xml
+++ b/app/src/main/res/menu/bottom_navigation_items.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_list"
+        android:id="@+id/searchFragment"
         android:title="@string/sample"
         android:color="@color/colorWhite"
         />
     <item
-        android:id="@+id/nab_setting"
+        android:id="@+id/question1SearchFragment"
         android:title="@string/question1"
         android:color="@color/colorWhite"
         />
