--- a/app/src/main/res/layout/fragment_question1_search.xml
+++ b/app/src/main/res/layout/fragment_question1_search.xml
@@ -22,9 +22,11 @@
         android:id="@+id/search_button_q1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/edit_search_q1"
-        app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/button_style"
+        android:text="@string/search"
+        android:textColor="@color/colorWhite"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="@string/search"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_search_q1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
