--- a/app/src/main/res/layout/row_qiita_list.xml
+++ b/app/src/main/res/layout/row_qiita_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
@@ -54,6 +55,27 @@
         app:layout_constraintBottom_toBottomOf="@id/tv_qiita_lgtm"
         app:layout_constraintLeft_toLeftOf="@id/tv_qiita_title"
         app:layout_constraintStart_toEndOf="@id/tv_qiita_lgtm" />
+
+    <TextView
+        android:id="@+id/tv_qiita_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/by"
+        tools:text="user" />
+
+    <TextView
+        android:id="@+id/by"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
+        android:text="by"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_qiita_lgtm_counter"
+        app:layout_constraintStart_toEndOf="@+id/tv_qiita_lgtm_counter"
+        app:layout_constraintTop_toTopOf="@+id/tv_qiita_lgtm_counter" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
