--- a/app/src/main/res/menu/bottom_navigation_items.xml
+++ b/app/src/main/res/menu/bottom_navigation_items.xml
@@ -4,10 +4,12 @@
         android:id="@+id/searchFragment"
         android:title="@string/sample"
         android:color="@color/colorWhite"
+        android:icon="@drawable/ic_baseline_brightness_high_24"
         />
     <item
         android:id="@+id/question1SearchFragment"
         android:title="@string/question1"
         android:color="@color/colorWhite"
+        android:icon="@drawable/ic_baseline_brightness_3_24"
         />
 </menu>
