--- a/app/src/main/res/layout/row_qiita_list.xml
+++ b/app/src/main/res/layout/row_qiita_list.xml
@@ -29,7 +29,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
         android:text="パーフェクトじゃないPHP"
+        android:textColor="@android:color/black"
         android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/iv_user_image"
         app:layout_constraintTop_toTopOf="parent" />
 
