--- a/app/src/main/res/layout/fragment_question1_search.xml
+++ b/app/src/main/res/layout/fragment_question1_search.xml
@@ -16,7 +16,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:hint="@string/search_comment"/>
+        android:hint="@string/search_comment"
+        android:inputType="text"/>
+
+    <TextView
+        android:id="@+id/error_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/zero_length_error"
+        android:textColor="@color/colorAccent"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@+id/edit_search_q1"
+        app:layout_constraintTop_toBottomOf="@+id/edit_search_q1" />
 
     <Button
         android:id="@+id/search_button_q1"
@@ -27,6 +38,7 @@
         android:textColor="@color/colorWhite"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_search_q1" />
+        app:layout_constraintTop_toBottomOf="@id/error_tv"
+        tools:layout_editor_absoluteY="388dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
